After Google drive
After Google drive

--- a/ICP1/ICP1_by_Vivek_Pottam.ipynb
+++ b/ICP1/ICP1_by_Vivek_Pottam.ipynb
@@ -6,7 +6,8 @@
       "name": "ICP1_by_Vivek_Pottam.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNrCMoqzpD6+QQWT1blmGLA",
+      "mount_file_id": "1Old9l3OV6pgIu8bYdkcobBvs1DuwSbKg",
+      "authorship_tag": "ABX9TyMNUj6sUOiY8qJDKSrF/0jI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,7 +53,7 @@
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -83,13 +84,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "1b0d795e-5289-4df4-f373-26452712dbef"
+        "outputId": "1cffe8c2-5d69-45b6-d619-e525b5c7a9fe"
       },
       "source": [
-        "raw_data = pd.read_csv('/content/Data.csv')\n",
+        "raw_data = pd.read_csv('/content/drive/My Drive/Datasets/BreastCancer/Data.csv')\n",
         "type(raw_data)"
       ],
-      "execution_count": 8,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -101,7 +102,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 17
         }
       ]
     },
@@ -124,12 +125,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 456
         },
-        "outputId": "b1877c57-8a98-4a35-9ef6-823e2694f775"
+        "outputId": "5a2abff8-249c-4163-c1ba-411b2b8815e2"
       },
       "source": [
         "raw_data"
       ],
-      "execution_count": 9,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -610,7 +611,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 18
         }
       ]
     },
@@ -1122,7 +1123,7 @@
       "source": [
         "raw_data.columns"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1171,7 +1172,7 @@
       "source": [
         "raw_data.describe()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2015,7 +2016,7 @@
         "#y=raw_data[\"diagnosis\"].map({'M':1,'B':0})\n",
         "y=raw_data.diagnosis.map({'M':1, 'B':0})"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2032,7 +2033,7 @@
       "source": [
         "x"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2507,7 +2508,7 @@
       "source": [
         "y"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2548,7 +2549,7 @@
       "source": [
         "list(x)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2618,7 +2619,7 @@
       "source": [
         "sns.heatmap(x.corr(),cbar=True,cmap='Greens',square=True,annot=False,annot_kws={'size': 10}, fmt= '0.1f')"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
