After the panopto Link

--- a/ICP1/ICP1_by_Vivek_Pottam.ipynb
+++ b/ICP1/ICP1_by_Vivek_Pottam.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1Old9l3OV6pgIu8bYdkcobBvs1DuwSbKg",
-      "authorship_tag": "ABX9TyMNUj6sUOiY8qJDKSrF/0jI",
+      "authorship_tag": "ABX9TyOLE3byVSWcdtbBidzFkw9o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,11 +29,43 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "QCQ_JwgSWHmj",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Panopto Link to walk throught of the document :"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mOqQ8hq5WQQs",
+        "colab_type": "text"
+      },
+      "source": [
+        "https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=5228ee4a-c864-4ef7-9bab-ac25017cb0e4\n",
+        "\n",
+        "\t"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "PdYk_Q9dFOb_",
         "colab_type": "text"
       },
       "source": [
         "Import all the required libraries that you are planning to use"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uSdAH_3LWRLX",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
       ]
     },
     {
